--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,7 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 own_practice/
-    - name: Lint with Pylint
-      run: |
-        pip install pylint
-        pylint -v own_practice/
+        flake8 maxmin.py
     - name: Test with pytest
       run: |
         pip install pytest
